// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDeposit applies content version to the content version attribute of the resource element 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_article": Object {
            "@publication_type": "full_text",
            "@xmlns:rel": "http://www.crossref.org/relations.xsd",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
                "@content_version": "am",
              },
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org",
              },
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a book 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "book": Object {
          "@book_type": "other",
          "book_metadata": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "an_utterly_fake_doi",
              "resource": Object {
                "#text": "https://test.com",
              },
              "timestamp": 1555009335577,
            },
            "edition_number": "3",
            "isbn": "this_is_an_isbn",
            "publication_date": Object {
              "@media_type": "online",
              "day": "02",
              "month": "03",
              "year": "2015",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
            "titles": Object {
              "title": "My new book full of pubs",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "an_utterly_fake_doi",
    "community": "10.21428/eea8ec7d",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a book without any date information 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "book": Object {
          "@book_type": "other",
          "book_metadata": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "an_utterly_fake_doi",
              "resource": Object {
                "#text": "https://test.com",
              },
              "timestamp": 1555009335577,
            },
            "edition_number": "3",
            "isbn": "this_is_an_isbn",
            "publication_date": Object {
              "@media_type": "online",
              "day": "10",
              "month": "04",
              "year": "2019",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
            "titles": Object {
              "title": "My new book full of pubs",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "an_utterly_fake_doi",
    "community": "10.21428/eea8ec7d",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a conference 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "conference": Object {
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Massachusetts Institute of Technology",
                "given_name": "Travis",
                "surname": "Rich",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Gabriel",
                "surname": "Stein",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Catherine",
                "surname": "Ahearn",
              },
              Object {
                "@contributor_role": "author",
                "@sequence": "additional",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
            ],
          },
          "event_metadata": Object {
            "conference_acronym": "TCIHA",
            "conference_date": Object {
              "#text": "2019-05-01",
            },
            "conference_location": "Kalamazoo, MI",
            "conference_name": "This Conference Is Happening Again",
            "conference_theme": "We love conferences don't we",
          },
          "proceedings_metadata": Object {
            "doi_data": Object {
              "doi": "yes_it_is_a_conference_doi",
              "resource": Object {
                "#text": "https://dev.pubpub.org/collection/4c3a0515",
              },
              "timestamp": 1555009335577,
            },
            "noisbn": Object {
              "@reason": "archive_volume",
            },
            "proceedings_title": "This Conference Is Happening Again",
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "05",
              "year": "2019",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "yes_it_is_a_conference_doi",
    "community": "10.21428/eea8ec7d",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a conference without any date information 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "conference": Object {
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Massachusetts Institute of Technology",
                "given_name": "Travis",
                "surname": "Rich",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Gabriel",
                "surname": "Stein",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Catherine",
                "surname": "Ahearn",
              },
              Object {
                "@contributor_role": "author",
                "@sequence": "additional",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
            ],
          },
          "event_metadata": Object {
            "conference_acronym": "TCIHA",
            "conference_date": Object {
              "#text": "2019-04-11",
            },
            "conference_location": "Kalamazoo, MI",
            "conference_name": "This Conference Is Happening Again",
            "conference_theme": "We love conferences don't we",
          },
          "proceedings_metadata": Object {
            "doi_data": Object {
              "doi": "yes_it_is_a_conference_doi",
              "resource": Object {
                "#text": "https://dev.pubpub.org/collection/4c3a0515",
              },
              "timestamp": 1555009335577,
            },
            "noisbn": Object {
              "@reason": "archive_volume",
            },
            "proceedings_title": "This Conference Is Happening Again",
            "publication_date": Object {
              "@media_type": "online",
              "day": "11",
              "month": "04",
              "year": "2019",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "yes_it_is_a_conference_doi",
    "community": "10.21428/eea8ec7d",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a pub 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_article": Object {
            "@publication_type": "full_text",
            "@xmlns:rel": "http://www.crossref.org/relations.xsd",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
              },
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org",
              },
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a pub in a book 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "book": Object {
          "@book_type": "other",
          "book_metadata": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "an_utterly_fake_doi",
              "resource": Object {
                "#text": "https://test.com",
              },
              "timestamp": 1555009335577,
            },
            "edition_number": "3",
            "isbn": "this_is_an_isbn",
            "publication_date": Object {
              "@media_type": "online",
              "day": "02",
              "month": "03",
              "year": "2015",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
            "titles": Object {
              "title": "My new book full of pubs",
            },
          },
          "content_item": Object {
            "@component_type": "chapter",
            "@xmlns:rel": "http://www.crossref.org/relations.xsd",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
              },
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "an_utterly_fake_doi",
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a pub in a conference 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "conference": Object {
          "conference_paper": Object {
            "@xmlns:rel": "http://www.crossref.org/relations.xsd",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
              },
              "timestamp": 1555009335577,
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Massachusetts Institute of Technology",
                "given_name": "Travis",
                "surname": "Rich",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Gabriel",
                "surname": "Stein",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Catherine",
                "surname": "Ahearn",
              },
              Object {
                "@contributor_role": "author",
                "@sequence": "additional",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
            ],
          },
          "event_metadata": Object {
            "conference_acronym": "TCIHA",
            "conference_date": Object {
              "#text": "2019-05-01",
            },
            "conference_location": "Kalamazoo, MI",
            "conference_name": "This Conference Is Happening Again",
            "conference_theme": "We love conferences don't we",
          },
          "proceedings_metadata": Object {
            "doi_data": Object {
              "doi": "yes_it_is_a_conference_doi",
              "resource": Object {
                "#text": "https://dev.pubpub.org/collection/4c3a0515",
              },
              "timestamp": 1555009335577,
            },
            "noisbn": Object {
              "@reason": "archive_volume",
            },
            "proceedings_title": "This Conference Is Happening Again",
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "05",
              "year": "2019",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "yes_it_is_a_conference_doi",
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a pub in an issue 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_article": Object {
            "@publication_type": "full_text",
            "@xmlns:rel": "http://www.crossref.org/relations.xsd",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
              },
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "journal_issue": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.e281f63f",
              "resource": Object {
                "#text": "https://dev.pubpub.org/collection/e281f63f",
              },
              "timestamp": 1555009335577,
            },
            "issue": "5",
            "journal_volume": Object {
              "volume": "2",
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "25",
              "month": "03",
              "year": "2017",
            },
            "titles": Object {
              "title": "Another Great Issue",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org",
              },
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "10.21428/eea8ec7d.e281f63f",
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for an issue 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_issue": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.e281f63f",
              "resource": Object {
                "#text": "https://dev.pubpub.org/collection/e281f63f",
              },
              "timestamp": 1555009335577,
            },
            "issue": "5",
            "journal_volume": Object {
              "volume": "2",
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "25",
              "month": "03",
              "year": "2017",
            },
            "titles": Object {
              "title": "Another Great Issue",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org",
              },
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "10.21428/eea8ec7d.e281f63f",
    "community": "10.21428/eea8ec7d",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for an issue without any date information 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_issue": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.e281f63f",
              "resource": Object {
                "#text": "https://dev.pubpub.org/collection/e281f63f",
              },
              "timestamp": 1555009335577,
            },
            "issue": "5",
            "journal_volume": Object {
              "volume": "2",
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "25",
              "month": "03",
              "year": "2019",
            },
            "titles": Object {
              "title": "Another Great Issue",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org",
              },
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "10.21428/eea8ec7d.e281f63f",
    "community": "10.21428/eea8ec7d",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a journal_article deposit for a pub with a hasReview connection 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_article": Object {
            "@publication_type": "full_text",
            "@xmlns:rel": "http://www.crossref.org/relations.xsd",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
              },
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "rel:program": Object {
              "@name": "relations",
              "rel:related_item": Array [
                Object {
                  "rel:inter_work_relation": Object {
                    "#text": "some-doi",
                    "@identifier-type": "doi",
                    "@relationship-type": "hasReview",
                  },
                },
              ],
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org",
              },
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a journal_article deposit for a pub with a hasSupplement connection 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_article": Object {
            "@publication_type": "full_text",
            "@xmlns:rel": "http://www.crossref.org/relations.xsd",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
              },
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "rel:program": Object {
              "@name": "relations",
              "rel:related_item": Array [
                Object {
                  "rel:inter_work_relation": Object {
                    "#text": "some-doi",
                    "@identifier-type": "doi",
                    "@relationship-type": "isSupplementedBy",
                  },
                },
              ],
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org",
              },
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a peer_review deposit for a pub with an isReviewOf connection 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "peer_review": Object {
          "@language": "en",
          "@recommendation": "bar",
          "@type": "foo",
          "@xmlns:rel": "http://www.crossref.org/relations.xsd",
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Kevin",
                "surname": "Bentham",
              },
            ],
          },
          "doi_data": Object {
            "doi": "10.21428/eea8ec7d.1519656b",
            "resource": Object {
              "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
            },
            "timestamp": 1555009335577,
          },
          "rel:program": Object {
            "@name": "relations",
            "rel:related_item": Array [
              Object {
                "rel:inter_work_relation": Object {
                  "#text": "some-doi",
                  "@identifier-type": "doi",
                  "@relationship-type": "isReviewOf",
                },
              },
            ],
          },
          "review_date": Object {
            "day": "01",
            "month": "03",
            "year": "2019",
          },
          "titles": Object {
            "title": "In Which Ian Makes A Pub",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a posted_content deposit for a pub when contentVersion is "preprint" 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "posted_content": Object {
          "@language": "en",
          "@type": "preprint",
          "@xmlns:rel": "http://www.crossref.org/relations.xsd",
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Kevin",
                "surname": "Bentham",
              },
            ],
          },
          "doi_data": Object {
            "doi": "10.21428/eea8ec7d.1519656b",
            "resource": Object {
              "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
            },
            "timestamp": 1555009335577,
          },
          "posted_date": Object {
            "@media_type": "print",
            "day": "01",
            "month": "03",
            "year": "2019",
          },
          "titles": Object {
            "title": "In Which Ian Makes A Pub",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a posted_content deposit for a pub with a hasPreprint connection 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_article": Object {
            "@publication_type": "full_text",
            "@xmlns:rel": "http://www.crossref.org/relations.xsd",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
              },
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "rel:program": Object {
              "@name": "relations",
              "rel:related_item": Array [
                Object {
                  "rel:intra_work_relation": Object {
                    "#text": "some-doi",
                    "@identifier-type": "doi",
                    "@relationship-type": "hasPreprint",
                  },
                },
              ],
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": Object {
                "#text": "https://frankdev.pubpub.org",
              },
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a posted_content deposit for a pub with an isPreprintOf connection 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "posted_content": Object {
          "@language": "en",
          "@type": "preprint",
          "@xmlns:rel": "http://www.crossref.org/relations.xsd",
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Kevin",
                "surname": "Bentham",
              },
            ],
          },
          "doi_data": Object {
            "doi": "10.21428/eea8ec7d.1519656b",
            "resource": Object {
              "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
            },
            "timestamp": 1555009335577,
          },
          "posted_date": Object {
            "@media_type": "print",
            "day": "01",
            "month": "03",
            "year": "2019",
          },
          "rel:program": Object {
            "@name": "relations",
            "rel:related_item": Array [
              Object {
                "rel:intra_work_relation": Object {
                  "#text": "some-doi",
                  "@identifier-type": "doi",
                  "@relationship-type": "isPreprintOf",
                },
              },
            ],
          },
          "titles": Object {
            "title": "In Which Ian Makes A Pub",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a sa_component deposit for a pub with a isSupplementTo connection 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "sa_component": Object {
          "@parent_doi": "some-doi",
          "component_list": Object {
            "component": Object {
              "@language": "en",
              "@parent_relation": "isPartOf",
              "contributors": Object {
                "person_name": Array [
                  Object {
                    "@contributor_role": "author",
                    "@sequence": "first",
                    "affiliation": "Springfield A&M",
                    "given_name": "Ian",
                    "surname": "Reynolds",
                  },
                  Object {
                    "@contributor_role": "reader",
                    "@sequence": "additional",
                    "given_name": "Kevin",
                    "surname": "Bentham",
                  },
                ],
              },
              "doi_data": Object {
                "doi": "some-doi/1519656b",
                "resource": Object {
                  "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
                },
                "timestamp": 1555009335577,
              },
              "publication_date": Object {
                "@media_type": "print",
                "day": "01",
                "month": "03",
                "year": "2019",
              },
              "titles": Object {
                "title": "In Which Ian Makes A Pub",
              },
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "some-doi/1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates relationships where the resource is a DOI 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "peer_review": Object {
          "@language": "en",
          "@xmlns:rel": "http://www.crossref.org/relations.xsd",
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Kevin",
                "surname": "Bentham",
              },
            ],
          },
          "doi_data": Object {
            "doi": "10.21428/eea8ec7d.1519656b",
            "resource": Object {
              "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
            },
            "timestamp": 1555009335577,
          },
          "rel:program": Object {
            "@name": "relations",
            "rel:related_item": Array [
              Object {
                "rel:inter_work_relation": Object {
                  "#text": "some-doi",
                  "@identifier-type": "doi",
                  "@relationship-type": "isReviewOf",
                },
              },
            ],
          },
          "review_date": Object {
            "day": "01",
            "month": "03",
            "year": "2019",
          },
          "titles": Object {
            "title": "In Which Ian Makes A Pub",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates relationships where the resource is a URL 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "peer_review": Object {
          "@language": "en",
          "@xmlns:rel": "http://www.crossref.org/relations.xsd",
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Kevin",
                "surname": "Bentham",
              },
            ],
          },
          "doi_data": Object {
            "doi": "10.21428/eea8ec7d.1519656b",
            "resource": Object {
              "#text": "https://frankdev.pubpub.org/pub/h2muzdpv",
            },
            "timestamp": 1555009335577,
          },
          "rel:program": Object {
            "@name": "relations",
            "rel:related_item": Array [
              Object {
                "rel:inter_work_relation": Object {
                  "#text": "https://foo.pubpub.org/pub/has-review",
                  "@identifier-type": "uri",
                  "@relationship-type": "isReviewOf",
                },
              },
            ],
          },
          "review_date": Object {
            "day": "01",
            "month": "03",
            "year": "2019",
          },
          "titles": Object {
            "title": "In Which Ian Makes A Pub",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "crossref@pubpub.org",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;
